# searchtest

./: Cargo.toml
src/: bench.rs  late-unicode.md  lib.rs  lipsum-at.md  lipsum-emph.md  lipsum-linebreaks.md  simple.md  unicode.md  www.md  www2.md  www3.md
